added user save endpoint
